Kustomize configuration added. Kind configuration added with deployments scripts. Basic monitoring added (to further updates)